--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "test": "jest"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.13.12",
+    "@types/jest": "^26.0.21",
+    "@typescript-eslint/eslint-plugin": "^4.19.0",
+    "@typescript-eslint/parser": "^4.19.0",
     "eslint": "^7.22.0",
     "jest": "^26.6.3",
     "typescript": "^4.2.3"
@@ -18,5 +22,8 @@
   "volta": {
     "node": "14.16.0",
     "yarn": "1.22.10"
+  },
+  "dependencies": {
+    "@babel/preset-typescript": "^7.13.0"
   }
 }
